--- a/Index.html
+++ b/Index.html
@@ -167,7 +167,7 @@
         </div>
     </section>
     
-<!-- Certificates Section -->
+    <!-- Certificates Section -->
 <section class="page-section certificates" id="certificates">
     <h2 class="section-title">My <span>Certificates</span></h2>
     <div class="certificates-container">
@@ -177,8 +177,8 @@
                 <img src="https://i.postimg.cc/br0WqgSZ/Ongeziwe-Qwayede-209634002-1.png" alt="Certificate Image">
             </div>
             <div class="certificate-content">
-                <h3>Certificate for Python</h3>
-                <p><strong>CAPACITI</strong></p>
+                <h3>Certificate For Python</h3>
+                <p><strong>Institution:</strong> CAPACITI</p>
                 <p><strong>Date:</strong> Nov 2024</p>
                 <a href="https://capeitinitiative-my.sharepoint.com/:b:/g/personal/omphile_rantswele_capaciti_org_za/Eav_i_S3WnlHhE3yICE9BuABr7TLfWJ9Y3QWSNVpkssEgA?e=PckaU1" target="_blank" class="btn-view">View Certificate</a>
             </div>
@@ -200,6 +200,7 @@
         <!-- Add more certificates here -->
     </div>
 </section>
+
 
     <!-- Projects Section -->
     <section class="page-section projects" id="projects">
@@ -288,7 +289,7 @@
             </div>
             <div class="testimonial-content">
                 <p>"Ongeziwe is a talented developer with a keen eye for detail. Her ability to solve complex problems is impressive!"</p>
-                <h3>- Sonwabo Mdaka</h3>
+                <h3>- Sonwabo Mdwaba</h3>
                 <span>PAICTA CEO</span>
             </div>
         </div>
